<resources>
    <string name="app_name">Github</string>
    <string name="text_login">By signing in you accept our <b>Terms</b> of use and \n<b>Privacy policy</b></string>
    <string name="btn_login_text">SIGN IN WITH GITHUB</string>
    <string name="sign_in_with_github_enterprise">SIGN IN WITH GITHUB ENTERPRISE</string>
    <string name="issues">Issues</string>
    <string name="home">Home</string>
    <string name="pull_request">Pull request</string>
    <string name="discussions">Discussions</string>
    <string name="repositories">Repositories</string>
    <string name="organizations">Organizations</string>
    <string name="starred">Starred</string>
    <string name="favourites">Favourites</string>
    <string name="favourites_description">Add favourite repositories for quick access at any time,, without having to search</string>
    <string name="add_favourite">add favourite</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="shortcuts_description_main">The things you need, one tap away</string>
    <string name="shortcuts_description_body">Fast access your list of Issues, Pull Request, or Discussions</string>
    <string name="get_started">get started</string>
    <string name="notifications">Notifications</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="my_work">My Work</string>
    <string name="kotlin">Kotlin</string>
    <string name="search_github">Search GitHub</string>
    <string name="find_your_stuff">Find your stuff</string>
    <string name="search_all_github_for_people_nrepositories_organizations_issues_and_npull_requests">Search all GitHub for People,\nRepositories, Organizations, Issues and\nPull Requests</string>
    <string name="see_more_repositories">See more repositories</string>
    <string name="people">People</string>
    <string name="see_more_people">See more people</string>
    <string name="repositories_with">Repositories with</string>
    <string name="issues_with">Issues with</string>
    <string name="pull_requests_with">Pull Requests with</string>
    <string name="people_with">People with</string>
    <string name="organizations_with">Organizations with</string>
    <string name="jump_to">Jump to</string>
    <string name="discover">Discover</string>
    <string name="trending_repositories">Trending Repositories</string>
    <string name="awesome_lists">Awesome Lists</string>
    <string name="inbox">Inbox</string>
    <string name="unread">Unread</string>
    <string name="history">History</string>
    <string name="followers">Followers</string>
</resources>