<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_github"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_color" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rect_8"
        android:backgroundTint="@color/text_color"
        android:fontFamily="@font/asar"
        android:text="@string/btn_login_text"
        android:textColor="@color/anti_text_color"
        app:layout_constraintBottom_toTopOf="@id/btn_login_with_enterprise" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_with_enterprise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_rect_8"
        android:backgroundTint="@color/anti_text_color"
        android:fontFamily="@font/asar"
        android:text="@string/sign_in_with_github_enterprise"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@id/tv_login_privacy" />

    <TextView
        android:id="@+id/tv_login_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/asar"
        android:gravity="center_horizontal"
        android:text="@string/text_login"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>