<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/asar"
        android:gravity="center"
        android:text="@string/explore"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/discover"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ll_my_work_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_my_work_1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_image_view"
            android:backgroundTint="#E91E63"
            android:padding="8dp"
            android:src="@drawable/ic_fire"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/tv_my_work_1"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:fontFamily="@font/asar"
            android:gravity="center"
            android:text="@string/trending_repositories"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_my_work_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_my_work_2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_image_view"
            android:backgroundTint="@color/purple_200"
            android:padding="8dp"
            android:src="@drawable/ic_fire"
            android:tint="@color/white" />

        <TextView
            android:id="@+id/tv_my_work_2"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:fontFamily="@font/asar"
            android:gravity="center"
            android:text="@string/awesome_lists"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/void_color">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/explore" />

    </LinearLayout>


</LinearLayout>