<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="serif"
            android:hint="@string/search_github"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_search_components"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_repository"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_repository"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_repository"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_repository"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="serif"
                android:textSize="18sp"
                tools:text="Repositories with" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_issues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_issues"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_issues"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_issues"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="serif"
                android:textSize="18sp"
                tools:text="Repositories with" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_pull_requests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_pull_requests"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_request"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_pull_requests"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="serif"
                android:textSize="18sp"
                tools:text="Repositories with" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_people"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_profile"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_people"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="serif"
                android:textSize="18sp"
                tools:text="Repositories with" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_organization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_organization"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_organization"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_organization"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="serif"
                android:textSize="18sp"
                tools:text="Repositories with" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_jump"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_jump"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="8dp"
                android:rotation="180"
                android:src="@drawable/ic_back"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_jump"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="serif"
                android:textSize="18sp"
                tools:text="Repositories with" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/shadow_under_search"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1E1E1E1E"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/find_your_stuff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/search_all_github_for_people_nrepositories_organizations_issues_and_npull_requests"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>