<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/text_color" />

            <ImageView
                android:id="@+id/iv_settings"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_settings"
                app:layout_constraintBottom_toBottomOf="@id/iv_back"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_back"
                app:tint="@color/official_blue" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:padding="2dp"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="@id/iv_settings"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@id/iv_settings"
                app:layout_constraintTop_toTopOf="@id/iv_settings"
                app:tint="@color/official_blue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_user_profile"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_circle_image_view"
                android:src="@drawable/ic_github" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center|start"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/asar"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Dilmuratov Damir" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center|start"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/asar"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textSize="18sp"
                    tools:text="Dilmuratov" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_location"
                app:tint="@color/text_color" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:layout_margin="8dp"
                android:ellipsize="marquee"
                android:fontFamily="@font/asar"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                tools:text="Karakalpakstan, Chimbay" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_person"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_profile"
                app:tint="@color/text_color" />

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:layout_margin="8dp"
                android:fontFamily="@font/asar"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                tools:text="4 followers" />

            <TextView
                android:id="@+id/tv_followings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:layout_margin="8dp"
                android:fontFamily="@font/asar"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                tools:text="6 followings" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shadow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@color/void_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shadow2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_starred"
                app:tint="@color/text_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:layout_margin="8dp"
                android:fontFamily="@font/asar"
                android:text="@string/repositories"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_repository" />

        <View
            android:id="@+id/line_under_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/ll_repository"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_my_work_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_image_view"
                android:backgroundTint="@color/grey_for_repositories"
                android:padding="8dp"
                android:src="@drawable/ic_repository" />

            <TextView
                android:id="@+id/tv_my_work_1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:fontFamily="@font/asar"
                android:gravity="center"
                android:text="@string/repositories"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_my_work_1_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="@font/asar"
                android:gravity="end|center_vertical"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                tools:text="16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_my_work_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_image_view"
                android:backgroundTint="@color/orange_for_organizations"
                android:padding="8dp"
                android:src="@drawable/ic_organization" />

            <TextView
                android:id="@+id/tv_my_work_2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:fontFamily="@font/asar"
                android:gravity="center"
                android:text="@string/organizations"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_my_work_2_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="@font/asar"
                android:gravity="end|center_vertical"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                tools:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_my_work_3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_image_view"
                android:backgroundTint="@color/yellow_for_starred"
                android:padding="8dp"
                android:src="@drawable/ic_starred" />

            <TextView
                android:id="@+id/tv_my_work_3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:fontFamily="@font/asar"
                android:gravity="center"
                android:text="@string/starred"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_my_work_3_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:fontFamily="@font/asar"
                android:gravity="end|center_vertical"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                tools:text="7" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/shadow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/void_color" />

    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
